<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/login"
        android:enabled="true"
        android:icon="@drawable/ic_login"
        android:title="@string/login"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/aboutus"
        android:enabled="true"
        android:icon="@drawable/ic_aboutus"
        android:title="@string/aboutus"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/exit"
        android:enabled="true"
        android:icon="@drawable/ic_exit"
        android:title="@string/exit"
        app:showAsAction="ifRoom" />
</menu>